--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@ body {
     font-family: 'Gilroy';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: $B0;
+    background-color: #fff;
 }
 
 code {
